--- a/blog/templates/blog/article_detail.html
+++ b/blog/templates/blog/article_detail.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ article.title }}</title>
-</head>
-<body>
-<h1>{{ article.title }}</h1>
-<p>{{ article.body }}</p>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+    <div class="container">
+        <h1>{{ article.title }}</h1>
+        <span>发布于：{{ article.pub_time.date }}</span><span>被浏览：{{ article.view_times }}次</span>
+        <p>{{ article.body }}</p>
+    </div>
+{% endblock %}
