--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,9 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div id="id-page" class="container">
-        <div id="id-header-back" class="jumbotron">
-            <h1 id="id-site-title">Giraffe's COOK HOUSE</h1>
-        </div>
         <div class="row">
             <div id="id-article-list" class="col-md-8">
                 {% for article in articles %}
@@ -18,5 +14,5 @@
                 {% endfor %}
             </div>
         </div>
-    </div>
+    </div> <!--end id-page-->
 {% endblock %}
