--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -5,6 +5,7 @@
     <title>Giraffe's COOK HOUSE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% load staticfiles %}
+{#    <link rel="stylesheet" href="{% static 'blog/css/pygments/github.css' %}">#}
     <link rel="stylesheet" href="{% static 'blog/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/font-awesome.min.css' %}">
