--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -5,7 +5,7 @@
     <title>Giraffe's COOK HOUSE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% load staticfiles %}
-{#    <link rel="stylesheet" href="{% static 'blog/css/pygments/github.css' %}">#}
+    <link rel="stylesheet" href="{% static 'blog/css/pygments/emacs.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/font-awesome.min.css' %}">
@@ -23,11 +23,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                       </button>
-                      <a class="navbar-brand" href="#"><h1 id="id-site-title">ZhiyuC</h1></a>
+                      <a class="navbar-brand" href="{% url 'index' %}"><p id="id-site-title">ZhiyuC</p></a>
                     </div>
                     <div class="collapse navbar-collapse" id="navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">主页</a></li>
+                        <li><a href="{% url 'index' %}">主页</a></li>
                         <li><a href="#">所有文章</a></li>
                         <li><a href="#">我的简历</a></li>
                         </ul>
@@ -37,8 +37,8 @@
             <div id="id-links" class="container-fluid">
                 <span>Newness-Driven Developer</span>
                 <a href="#"><i class="fa fa-envelope-o fa-3x" aria-hidden="false"></i></a>
-                <a href="#"><i class="fa fa-weibo fa-3x" aria-hidden="false"></i></a>
-                <a href="#"><i class="fa fa-github fa-3x" aria-hidden="false"></i></a>
+                <a href="http://weibo.com/zhiyuc" target="_blank"><i class="fa fa-weibo fa-3x" aria-hidden="false"></i></a>
+                <a href="https://github.com/houshengandt" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="false"></i></a>
             </div>
         </div>
     {% block content %}{% endblock %}
