--- a/blog/templates/blog/article_archive.html
+++ b/blog/templates/blog/article_archive.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-        <div class="row">
+    <div class="row">
             <div id="id-article-list" class="col-md-8">
-                {% for article in articles %}
+                {% for article in latest %}
                 <h2><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h2>
                 <p>{{ article.abstract }}</p>
                 <a href="{{ article.get_absolute_url }}">阅读全文</a>
@@ -35,6 +35,7 @@
                         {% endfor %}
                     </ul>
                 </div>
+            </div>
         </div>
     </div> <!--end id-page-->
 {% endblock %}
