--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -115,6 +115,12 @@ hr {
     h1 {
         font-size: x-large;
     }
+    h2 {
+        font-size: large;
+    }
+    p {
+        font-size: x-small;
+    }
     #id-links span {
         display: block;
     }
