--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -29,7 +29,7 @@
                         <ul class="nav navbar-nav navbar-right">
                         <li><a href="{% url 'index' %}">主页</a></li>
                         <li><a href="{% url 'archive' %}">所有文章</a></li>
-                        <li><a href="#">我的简历</a></li>
+                        <li><a href="{% url 'about' %}">我的简历</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
                 </div><!-- /.container-fluid -->
@@ -42,6 +42,7 @@
             </div>
         </div>
     {% block content %}{% endblock %}
+    </div>
     <!-- jQuery (Bootstrap JS plugins depend on it) -->
     <script src="{% static 'blog/js/jquery-2.1.4.min.js' %}"></script>
     <script src="{% static 'blog/js/bootstrap.min.js' %}"></script>
