--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -11,7 +11,7 @@
         <div id="id-side" class="col-md-4">
             <div id="id-tags">
                 {% for tag in tags %}
-                    <a href="#">{{ tag.tag_name }}<span> ({{ tag.article.count }})</span></a>
+                    <a href="{% url 'tag' tag.tag_name %}">{{ tag.tag_name }}<span> ({{ tag.article.count }})</span></a>
                 {% endfor %}
             </div>
             <div id="id-archive">
