--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -42,6 +42,12 @@ hr {
 #id-article-list h2 a{
     color: black;
 }
+.list-group-item {
+    opacity: 0.7;
+}
+.list-group-item:hover{
+    opacity: 1;
+}
 /*标签云样式*/
 
 .tags {
@@ -57,6 +63,9 @@ hr {
     position: relative;
     border-radius: 0 1px 1px 0;
     opacity: 0.7;
+}
+.tags a:hover{
+    opacity: 1;
 }
 .tags a::before{
     display: block;
