调大小屏时的字体 为邮箱连接添加mailto属性 小屏时点击折叠导航栏按钮后自动取消focus的js

--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -160,9 +160,6 @@ hr {
     h2 {
         font-size: large;
     }
-    p {
-        font-size: x-small;
-    }
     #id-links span {
         display: block;
     }
@@ -174,7 +171,7 @@ hr {
     padding-right: 15px;
     }
     .info {
-    font-size: x-small;
+    font-size: small;
     }
     .info span {
         margin-right: 30px;
