--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -17,7 +17,7 @@
                 <div class="container-fluid">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
-                      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+                      <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -36,7 +36,7 @@
             </nav>
             <div id="id-links" class="container-fluid">
                 <span>Newness-Driven Developer</span>
-                <a href="#"><i class="fa fa-envelope-o fa-3x" aria-hidden="false"></i></a>
+                <a href="mailto:zhiyuc@outlook.com"><i class="fa fa-envelope-o fa-3x" aria-hidden="false"></i></a>
                 <a href="http://weibo.com/zhiyuc" target="_blank"><i class="fa fa-weibo fa-3x" aria-hidden="false"></i></a>
                 <a href="https://github.com/houshengandt" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="false"></i></a>
             </div>
