加入多说评论系统，完美

--- a/blog/templates/blog/side.html
+++ b/blog/templates/blog/side.html
@@ -25,4 +25,7 @@
             {% endfor %}
         </ul>
     </div>
+    <h3>最新评论</h3>
+    {% include "duoshuo/duoshuo_recent_comment.html" %}
+    {% include "duoshuo/duoshuo_common.html" %}
 </div>
