--- a/blog/templates/blog/article_detail.html
+++ b/blog/templates/blog/article_detail.html
@@ -8,6 +8,7 @@
             </div>
             <hr>
             <p>{{ article.body }}</p>
+            {% include "duoshuo/duoshuo_commentbox.html" %}
         </div>
         <div id="id-side" class="col-md-4">
             <div class="tags">
@@ -22,6 +23,10 @@
                     <a href="{{ article.get_absolute_url }}" class="list-group-item">{{ article.title }}</a>
                     {% endfor %}
                 </div>
+            </div>
+            <div class="hidden-xs hidden-sm">
+                {% include "duoshuo/duoshuo_commentbox.html" %}
+                {% include "duoshuo/duoshuo_common.html" %}
             </div>
         </div>
     </div>
