--- a/wenkucheckin/templates/wenkucheckin/index.html
+++ b/wenkucheckin/templates/wenkucheckin/index.html
@@ -3,19 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>文库自动签到</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% load staticfiles %}
+    <link rel="stylesheet" href="{% static 'blog/css/bootstrap.min.css' %}">
 </head>
 <body>
-    <h1>百度文库自动签到</h1>
-    <form action="{% url 'add_account' %}" method="post">
-        {% csrf_token %}
-        <input type="text" name="baiduaccount">
-        <input type="password" name="password">
-        <input type="submit" value="添加账号">
-    </form>
-    <ul>
-        {% for baiduaccount in object_list %}
-            <li>{{ baiduaccount.username }}|{{ baiduaccount.check_in_times }}|{{ baiduaccount.wealth }}|{{ baiduaccount.ticket }}|{{ baiduaccount.last_checkin_time }}</li>
-        {% endfor %}
-    </ul>
+    <div class="container">
+        <h1>百度文库自动签到</h1>
+        <hr>
+        <br>
+        <form class="form-horizontal" role="form" action="{% url 'add_account' %}" method="post">
+            <div class="form-group">
+                {% csrf_token %}
+                <label  class="col-sm-2 control-label" for="baiduaccount">百度账号：</label>
+                <div class="col-sm-10">
+                    <input type="text" name="baiduaccount" class="form-control" placeholder="输入百度账号">
+                </div>
+                <label  class="col-sm-2 control-label" for="password">密码：</label>
+                <div class="col-sm-10">
+                    <input type="password" name="password" class="form-control" placeholder="输入密码">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">添加账号</button>
+                </div>
+            </div>
+        </form>
+        <div class="table-responsive">
+            <table class="table table-striped">
+                <tr><td>账号</td><td>签到次数</td><td>下载券</td><td>上次签到时间</td><td></td></tr>
+                {% for baiduaccount in object_list %}
+                    <tr>
+                        <td>{{ baiduaccount.username }}</td>
+                        <td>{{ baiduaccount.check_in_times }}</td>
+                        <td>{{ baiduaccount.ticket }}</td>
+                        <td>{{ baiduaccount.last_checkin_time }}</td>
+                        <td><a href="{% url 'delete_account' baiduaccount.pk %}">删除</a></td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
+        <ul>
+            {% for baiduaccount in object_list %}
+                <li>{{ baiduaccount.username }}|{{ baiduaccount.check_in_times }}|{{ baiduaccount.ticket }}|
+                    {{ baiduaccount.last_checkin_time }}|<a href="{% url 'delete_account' baiduaccount.username %}">删除</a></li>
+            {% endfor %}
+        </ul>
+    </div>
 </body>
 </html>
