--- a/wenkucheckin/templates/wenkucheckin/verify.html
+++ b/wenkucheckin/templates/wenkucheckin/verify.html
@@ -4,6 +4,9 @@
     {% load staticfiles %}
     <meta charset="UTF-8">
     <title>文库自动签到</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% load staticfiles %}
+    <link rel="stylesheet" href="{% static 'blog/css/bootstrap.min.css' %}">
 </head>
 <body>
     <h1>百度文库自动签到</h1>
