--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="id-page" class="container">
-        <div id="id-header-back" class="jumbotron">
+        <div id="id-header-back" class="jumbotron base-page-jumbotron">
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
                     <!-- Brand and toggle get grouped for better mobile display -->
@@ -29,6 +29,7 @@
                         <ul class="nav navbar-nav navbar-right">
                         <li><a href="{% url 'index' %}">主页</a></li>
                         <li><a href="{% url 'archive' %}">所有文章</a></li>
+                        <li><a href="{% url 'workshop' %}">workshop</a></li>
                         <li><a href="{% url 'about' %}">我的简历</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
