--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'blog/css/style.css' %}">
 </head>
 <body>
-    <div id="id-page" class="container">
+    <div id="id-page" class="container page-wrap">
         <div id="id-header-back" class="jumbotron base-page-jumbotron">
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
@@ -44,6 +44,9 @@
         </div>
         {% block content %}{% endblock %}
     </div>
+        <footer>
+            <p>这里是备案信息</p>
+        </footer>
     <!-- jQuery (Bootstrap JS plugins depend on it) -->
     <script src="{% static 'blog/js/jquery-2.1.4.min.js' %}"></script>
     <script src="{% static 'blog/js/bootstrap.min.js' %}"></script>
