add to do list app change workshop page(to do list e.g. link ) change wenkucheckin log level ERROR

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -45,7 +45,7 @@
         {% block content %}{% endblock %}
     </div>
         <footer>
-            <p>这里是备案信息</p>
+            <p>辽ICP备16003003号-2</p>
         </footer>
     <!-- jQuery (Bootstrap JS plugins depend on it) -->
     <script src="{% static 'blog/js/jquery-2.1.4.min.js' %}"></script>
