add wenkucheckin app to workshop page links open in new window

--- a/todolist/templates/todolist/base.html
+++ b/todolist/templates/todolist/base.html
@@ -13,7 +13,11 @@
             <div class="uk-navbar-left">
                 <ul class="uk-navbar-nav">
                     <li class="uk-active"><a href="{% url 'todolistindex' %}">To Do List</a></li>
-                    <li><a href=""></a></li>
+                    <li>
+                        <a target="_blank" href="https://github.com/houshengandt/To-Do-List-Web-App-Example" uk-icon="icon: github-alt">
+                            查看代码
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
